--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.caesar.auto.MainActivity">
 
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginTop="5dp"
+        android:weightSum="4"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_gravity="center_horizontal"
             android:contentDescription="@string/app_name"
             android:src="@mipmap/ic_launcher" />
 
         <ImageView
             android:id="@+id/img2"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_gravity="center_horizontal"
             android:contentDescription="@string/app_name"
             android:src="@mipmap/ic_launcher"
@@ -30,9 +35,10 @@
 
         <TextView
             android:id="@+id/sample_text"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:text="Hello World!"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -40,14 +46,154 @@
 
         <ProgressBar
             android:id="@+id/progressbar"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:indeterminateDrawable="@drawable/progressbar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/sample_text" />
 
     </android.support.v7.widget.LinearLayoutCompat>
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:weightSum="6"
+        android:orientation="horizontal">
 
-</ScrollView>
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="Base"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Fixed"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical"
+            android:textAllCaps="false" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="Cached"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="Single"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical"/>
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="Schedule"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical"/>
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="Priority"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical"/>
+    </android.support.v7.widget.LinearLayoutCompat>
+
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:weightSum="7"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_10"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="插入"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_20"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="选择"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical"
+            android:textAllCaps="false" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_30"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="冒泡"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_40"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="快速"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical"/>
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_50"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="合并"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical"/>
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_60"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="希尔"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical"/>
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_70"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:text="堆排序"
+            android:textSize="10sp"
+            android:layout_gravity="center_vertical"/>
+    </android.support.v7.widget.LinearLayoutCompat>
+</LinearLayout>
